--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ body{
 	top: 70%;
 	left: 50%;
 	transform: translate(-50%,-50%);
-	width: 140px;
+	width: clamp(5rem , calc(7rem + 1vw) , 8rem);
 	height: 38px;
 	border-radius: var(--radius-L);
 }
